--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,48 @@
-apturl>=0.5.2
-asn1crypto>=0.24.0
-astroid>=2.3.3
-attrs>=19.3.0
-Brlapi>=0.6.6
-cachetools>=4.0.0
-certifi>=2020.4.5.1
+appnope>=0.1.0
+astroid>=1.6.5
+atomicwrites>=1.2.1
+attrs>=18.2.0
+backcall>=0.1.0
+beautifulsoup4>=4.6.0
+bs4>=0.0.1
+certifi>=2018.4.16
 chardet>=3.0.4
-command-not-found>=0.3
-cryptography>=2.1.4
-cupshelpers>=1.0
-defer>=1.0.6
-distro-info>==0.18ubuntu0.18.04.1
-emoji>=0.5.4
-google-api-python-client>=1.7.11
-google-auth>=1.10.0
-google-auth-httplib2>=0.0.3
-google-auth-oauthlib>=0.4.1
-holidays>=0.9.12
-httplib2>=0.15.0
-idna>=2.9
-importlib-metadata>=1.6.0
-inflection>=0.4.0
-isort>=4.3.21
-jsonschema>=3.2.0
-keyring>=10.6.0
-keyrings.alt>=3.0
-language-selector>=0.1
-launchpadlib>=1.10.6
-lazr.restfulclient>=0.13.5
-lazr.uri>=1.0.3
-lazy-object-proxy>=1.4.3
-louis>=3.5.0
-macaroonbakery>=1.1.3
-Mako>=1.0.7
+click>=6.7
+colorama>=0.4.0
+decorator>=4.3.0
+Flask>=1.0.2
+heroku>=0.1.4
+idna>=2.6
+ipython>=6.4.0
+ipython-genutils>=0.2.0
+isort>=4.3.4
+itsdangerous>=0.24
+jedi>=0.12.0
+Jinja2>=2.10
+lazy-object-proxy>=1.3.1
 MarkupSafe>=1.0
 mccabe>=0.6.1
-netifaces>=0.10.4
-numpy>=1.18.3
-oauth>=1.0.1
-oauthlib>=3.1.0
-olefile>=0.45.1
-openapi>=1.1.0
-pandas>=1.0.3
-pexpect>=4.2.1
-Pillow>=5.1.0
-protobuf>=3.0.0
-pyasn1>=0.4.8
-pyasn1-modules>=0.2.7
-pycairo>=1.16.2
-pycrypto>=2.6.1
-pycups>=1.9.73
-pygobject>=3.26.1
-pylint>=2.4.4
-pymacaroons>=0.13.0
-PyNaCl>=1.1.2
-pyRFC3339>=1.0
-pyrsistent>=0.16.0
-PySocks>=1.7.1
-python-apt>=1.6.5+ubuntu0.2
-python-dateutil>=2.8.1
-python-debian>=0.1.32
-pytz>=2020.1
-pyxdg>=0.25
-PyYAML>=3.12
-reportlab>=3.4.0
-requests>=2.23.0
-requests-oauthlib>=1.3.0
-requests-unixsocket>=0.1.5
-rsa>=4.0
-SecretStorage>=2.3.1
-simplejson>=3.13.2
-six>=1.14.0
-system-service>=0.3
-systemd-python>=234
-tweepy>=3.8.0
-typed-ast>=1.4.0
-ubuntu-drivers-common>=0.0.0
-ufw>=0.36
-unattended-upgrades>=0.1
-uritemplate>=3.0.1
-urllib3>=1.25.9
-usb-creator>=0.3.3
-wadllib>=1.3.2
-wrapt>=1.11.2
-xkit>=0.0.0
-zipp>=3.1.0
-zope.interface>=4.3.2
+more-itertools>=4.3.0
+oauthlib>=2.1.0
+parso>=0.2.0
+pexpect>=4.5.0
+pickleshare>=0.7.5
+pluggy>=0.8.0
+prompt-toolkit>=1.0.15
+ptyprocess>=0.5.2
+py>=1.7.0
+Pygments>=2.2.0
+pylint>=1.9.2
+PySocks>=1.6.8
+pytest>=3.9.1
+python-dateutil>=1.5
+requests>=2.20.0
+requests-oauthlib>=1.0.0
+simplegeneric>=0.8.1
+six>=1.11.0
+traitlets>=4.3.2
+tweepy>=3.6.0
+urllib3>=1.22
+wcwidth>=0.1.7
+Werkzeug>=0.14.1
+wrapt>=1.10.11
